// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. a full article with all content items with dropcap template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "height": NaN,
                "left": 5,
                "position": "absolute",
                "top": 0,
                "width": 175,
                "zIndex": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FF0000",
                  "fontFamily": "TimesModern-Regular",
                  "fontSize": 100,
                  "marginBottom": -22,
                  "marginRight": 5,
                  "marginTop": -12,
                }
              }
            >
              T
            </Text>
          </View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": NaN,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "left": 0,
                    "lineHeight": NaN,
                    "marginBottom": 20,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                his being Black History Month, last week
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <ArticleImage />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <ArticleImage />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <ArticleImage />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "lineHeight": 30,
                    "marginBottom": 20,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": NaN,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": NaN,
                    }
                  }
                >
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <Ad
            style={
              Object {
                "borderBottomColor": "#DBDBDB",
                "borderBottomWidth": 1,
                "borderTopColor": "#DBDBDB",
                "borderTopWidth": 1,
                "marginBottom": 20,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <PullQuote>
              The pull quote content
            </PullQuote>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "paddingBottom": 25,
                "width": "100%",
              }
            }
          >
            <Video />
            <View>
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#696969",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 13,
                      "lineHeight": 16,
                    }
                  }
                >
                  This is video caption
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "marginHorizontal": 10,
                  "marginVertical": 5,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FF0000",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 18,
                    "marginBottom": 20,
                  }
                }
              >
                EXAMPLE TITLE
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example bullet text
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    An example 
                    <Text
                      style={
                        Object {
                          "color": "#006699",
                          "textDecorationLine": "underline",
                        }
                      }
                    >
                      link
                    </Text>
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    More example text.
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example text 
                    <Text
                      style={
                        Object {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      this is bold 
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontStyle": "italic",
                        }
                      }
                    >
                      this is in italics.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;

exports[`2. an article with no content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`3. an article with a nested markup in first paragraph displays a drop cap 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "height": NaN,
                "left": 5,
                "position": "absolute",
                "top": 0,
                "width": 175,
                "zIndex": 1,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#FF0000",
                  "fontFamily": "TimesModern-Regular",
                  "fontSize": 100,
                  "marginBottom": -22,
                  "marginRight": 5,
                  "marginTop": -12,
                }
              }
            >
              Q
            </Text>
          </View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": NaN,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 0,
                    "lineHeight": NaN,
                    "marginBottom": 20,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                 Some years ago I made the decision to take as a friend a woman who is very opinionated.
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "height": 20,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#000000",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": NaN,
                    "fontStyle": "normal",
                    "fontWeight": "bold",
                    "left": 0,
                    "lineHeight": NaN,
                    "marginBottom": 20,
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                When she does come to social events, she dominates.
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <ArticleExtras />
        </View>
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`4. an article skeleton with responsive items 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0f0f0",
    }
  }
>
  <RCTScrollView>
    <View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        />
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "lineHeight": 30,
                    "marginBottom": 20,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": NaN,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": NaN,
                    }
                  }
                >
                  This being Black History Month, last week
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
                "paddingLeft": 10,
                "paddingRight": 10,
              }
            }
          >
            <InteractiveWrapper />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <ArticleImage />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <ArticleImage />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <ArticleImage />
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "paddingLeft": 10,
                "paddingRight": 10,
                "width": 660,
              }
            }
          >
            <View>
              <Text
                style={
                  Object {
                    "color": "#333333",
                    "fontFamily": "TimesDigitalW04",
                    "fontSize": 17,
                    "lineHeight": 30,
                    "marginBottom": 20,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "TimesDigitalW04",
                      "fontSize": NaN,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "lineHeight": NaN,
                    }
                  }
                >
                  Some content
                </Text>
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <Ad
            style={
              Object {
                "borderBottomColor": "#DBDBDB",
                "borderBottomWidth": 1,
                "borderTopColor": "#DBDBDB",
                "borderTopWidth": 1,
                "marginBottom": 20,
                "paddingHorizontal": 10,
                "paddingVertical": 10,
              }
            }
          />
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <PullQuote>
              The pull quote content
            </PullQuote>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "column",
                "paddingBottom": 25,
                "width": "100%",
              }
            }
          >
            <Video />
            <View>
              <View
                style={
                  Object {
                    "paddingLeft": 10,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "#696969",
                      "fontFamily": "GillSansMTStd-Medium",
                      "fontSize": 13,
                      "lineHeight": 16,
                    }
                  }
                >
                  This is video caption
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View>
        <View
          style={
            Object {
              "alignSelf": "center",
              "backgroundColor": "#ffffff",
              "maxWidth": "100%",
              "width": 1194,
            }
          }
        >
          <View>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "flexDirection": "row",
                  "marginHorizontal": 0,
                  "marginVertical": 10,
                  "width": "80.8%",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#FF0000",
                    "fontFamily": "GillSansMTStd-Medium",
                    "fontSize": 15,
                    "fontWeight": "400",
                    "letterSpacing": 1.2,
                    "lineHeight": 18,
                    "marginBottom": 20,
                    "paddingRight": 20,
                    "width": "20%",
                  }
                }
              >
                EXAMPLE TITLE
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example bullet text
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    An example 
                    <Text
                      style={
                        Object {
                          "color": "#006699",
                          "textDecorationLine": "underline",
                        }
                      }
                    >
                      link
                    </Text>
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    More example text.
                  </Text>
                </View>
                <View
                  style={
                    Object {
                      "flexDirection": "row",
                      "marginBottom": 20,
                      "paddingLeft": 1,
                      "width": "100%",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "#FF0000",
                        "borderRadius": 2.5,
                        "height": 5,
                        "top": 2,
                        "width": 5,
                      }
                    }
                  />
                  <Text
                    style={
                      Object {
                        "color": "#333333",
                        "fontFamily": "TimesDigitalW04",
                        "fontSize": 16,
                        "lineHeight": 27,
                        "marginTop": -8,
                        "paddingLeft": 15,
                        "width": "95%",
                      }
                    }
                  >
                    Example text 
                    <Text
                      style={
                        Object {
                          "fontWeight": "bold",
                        }
                      }
                    >
                      this is bold 
                    </Text>
                    <Text
                      style={
                        Object {
                          "fontStyle": "italic",
                        }
                      }
                    >
                      this is in italics.
                    </Text>
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
</View>
`;
